syntax = "proto3";

option csharp_namespace = "CharactersGrpc.Proto";

package character;

service CharacterService {
  rpc RegisterCharacter (RegisterCharacterRequest) returns (RegisterCharacterResponse);
  rpc GetCharacter (GetCharacterRequest) returns (GetCharacterResponse);
}

message RegisterCharacterRequest {
  string character_name = 1;
  string character_description = 2;
  int32 character_level = 3;
  string race = 4;
  string world_view = 5;
  int32 speed = 6;
  int32 defence = 7;
  int32 health = 8;
  int32 max_health = 9;
  int32 strength = 10;
  int32 dexterity = 11;
  int32 endurance = 12;
  int32 intelligence = 13;
  int32 wisdom = 14;
  int32 bonus = 15;
  repeated string gear = 16;
  repeated string weapons = 17;
  string personality_traits = 18;
  string ideals = 19;
  string bonds = 20;
  string flaws = 21;
  string history = 22;
  repeated string active_skills = 23;
  repeated string passive_skills = 24;
  int64 user_id = 25;
}

message RegisterCharacterResponse {
  int64 character_id = 1;
}

message GetCharacterRequest {
  int64 character_id = 1;
}

message GetCharacterResponse {
  CharacterModel character = 1;
}

message CharacterModel {
  int64 character_id = 1;
  int64 user_id = 2;
  string character_name = 3;
  string character_description = 4;
  int32 character_level = 5;
  string race = 6;
  string world_view = 7;
  int32 speed = 8;
  int32 defence = 9;
  int32 health = 10;
  int32 max_health = 11;
  int32 strength = 12;
  int32 dexterity = 13;
  int32 endurance = 14;
  int32 intelligence = 15;
  int32 wisdom = 16;
  int32 bonus = 17;
  repeated string gear = 18;
  repeated string weapons = 19;
  string personality_traits = 20;
  string ideals = 21;
  string bonds = 22;
  string flaws = 23;
  string history = 24;
  repeated string active_skills = 25;
  repeated string passive_skills = 26;
  string status = 27;
}